--- a/UI/index.html
+++ b/UI/index.html
@@ -79,51 +79,282 @@
         padding: 10px;
         border-radius: 8px;
     }
+
+    /* Autocomplete Styles */
+    #searchBoxWrapper {
+        display: flex;
+        justify-content: center;
+        position: relative;
+        margin-bottom: 25px;
+    }
+
+    #searchBox {
+        display: flex;
+        width: 50%;
+        position: relative;
+    }
+
+    #query {
+        flex: 1;
+        padding: 10px 15px;
+        border-radius: 8px 0 0 8px;
+        border: none;
+        font-size: 1rem;
+    }
+
+    #btn {
+        padding: 10px 20px;
+        border-radius: 0 8px 8px 0;
+        border: none;
+        background: #5af;
+        color: black;
+        font-weight: bold;
+        cursor: pointer;
+        transition: background 0.3s;
+    }
+
+    #btn:hover {
+        background: #3a9;
+    }
+
+    #suggestionsContainer {
+        display: none;
+        position: absolute;
+        top: 100%;
+        left: 0;
+        right: 0;
+        background: rgba(30, 30, 60, 0.95);
+        border: 1px solid #5af;
+        border-radius: 0 0 8px 8px;
+        max-height: 300px;
+        overflow-y: auto;
+        z-index: 1000;
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.4);
+    }
+
+    .suggestions-list {
+        list-style: none;
+        padding: 0;
+        margin: 0;
+    }
+
+    .suggestion-header {
+        padding: 8px 15px;
+        color: #5af;
+        font-weight: bold;
+        font-size: 0.85rem;
+        border-bottom: 1px solid rgba(90, 175, 255, 0.2);
+    }
+
+    .suggestion-item {
+        padding: 10px 15px;
+        cursor: pointer;
+        border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+        transition: background 0.2s;
+    }
+
+    .suggestion-item:hover {
+        background: rgba(90, 175, 255, 0.2);
+    }
+
+    .suggestion-item:last-child {
+        border-bottom: none;
+    }
+
+    /* Results Styles */
+    .result-count {
+        color: #5af;
+        margin-bottom: 15px;
+        font-weight: bold;
+        font-size: 0.95rem;
+    }
+
+    .result-item {
+        background: rgba(255,255,255,0.1);
+        border-radius: 10px;
+        padding: 10px;
+        margin-bottom: 10px;
+        box-shadow: 0 0 10px rgba(255,255,255,0.2);
+        border-left: 3px solid #5af;
+    }
+
+    .result-summary {
+        cursor: pointer;
+        font-size: 1.1rem;
+        padding: 5px;
+        display: flex;
+        align-items: center;
+        gap: 10px;
+    }
+
+    .result-index {
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+        width: 24px;
+        height: 24px;
+        background: #5af;
+        color: black;
+        border-radius: 50%;
+        font-weight: bold;
+        font-size: 0.8rem;
+    }
+
+    .result-title {
+        flex: 1;
+        font-weight: bold;
+        color: #5af;
+    }
+
+    .result-snippet {
+        color: rgba(255, 255, 255, 0.7);
+        font-size: 0.9rem;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        max-width: 300px;
+    }
+
+    .result-content {
+        padding: 10px 15px;
+        margin-top: 10px;
+    }
+
+    .result-field {
+        margin-bottom: 8px;
+        padding: 5px 0;
+        border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+    }
+
+    .result-field strong {
+        color: #5af;
+        display: block;
+        font-size: 0.85rem;
+        text-transform: uppercase;
+        margin-bottom: 3px;
+    }
+
+    .result-field span {
+        display: block;
+        color: rgba(255, 255, 255, 0.85);
+        word-wrap: break-word;
+    }
+
+    .result-field pre {
+        background: rgba(0,0,0,0.4);
+        padding: 10px;
+        border-radius: 4px;
+        overflow-x: auto;
+        font-size: 0.85rem;
+        margin: 0;
+    }
+
+    .loading {
+        text-align: center;
+        color: #5af;
+        font-size: 1.2rem;
+        padding: 20px;
+        animation: pulse 1.5s infinite;
+    }
+
+    @keyframes pulse {
+        0%, 100% { opacity: 1; }
+        50% { opacity: 0.5; }
+    }
+
+    .no-results {
+        text-align: center;
+        color: #ccc;
+        padding: 20px;
+        font-size: 1rem;
+    }
+
+    .error-message {
+        background: rgba(255, 100, 100, 0.2);
+        border: 1px solid #ff6464;
+        border-radius: 8px;
+        padding: 15px;
+        color: #ff9999;
+        margin-bottom: 15px;
+    }
+
+    .error-message ul {
+        margin: 10px 0;
+        padding-left: 20px;
+    }
+
+    .error-message li {
+        margin: 5px 0;
+        font-size: 0.9rem;
+    }
+
+    /* Responsive Design */
+    @media (max-width: 768px) {
+        h1 {
+            font-size: 2rem;
+        }
+
+        #searchBox {
+            width: 90%;
+            flex-direction: column;
+        }
+
+        #query {
+            border-radius: 8px 8px 0 0;
+            margin-bottom: 10px;
+        }
+
+        #btn {
+            border-radius: 0 0 8px 8px;
+            width: 100%;
+        }
+
+        .result-container {
+            width: 95%;
+        }
+
+        .result-snippet {
+            max-width: 100%;
+        }
+
+        #suggestionsContainer {
+            width: 100%;
+        }
+    }
+
+    /* Scrollbar styling */
+    #suggestionsContainer::-webkit-scrollbar {
+        width: 6px;
+    }
+
+    #suggestionsContainer::-webkit-scrollbar-track {
+        background: transparent;
+    }
+
+    #suggestionsContainer::-webkit-scrollbar-thumb {
+        background: #5af;
+        border-radius: 3px;
+    }
+
+    #suggestionsContainer::-webkit-scrollbar-thumb:hover {
+        background: #3a9;
+    }
 </style>
 </head>
 <body>
 <div class="overlay">
     <h1>⭐ Stellar Trace Search ⭐</h1>
-    <div id="searchBox">
-        <input type="text" id="query" placeholder="Search ArXiv (e.g., woman, physics, AI)..." />
-        <button id="btn" onclick="runSearch()">Search</button>
+    <div id="searchBoxWrapper">
+        <div id="searchBox">
+            <input type="text" id="query" placeholder="Search ArXiv (e.g., woman, physics, AI)..." />
+            <button id="btn">Search</button>
+            <div id="suggestionsContainer"></div>
+        </div>
     </div>
 
     <div class="result-container" id="results"></div>
 </div>
 
-<script>
-async function runSearch() {
-    const q = document.getElementById('query').value.trim();
-    if (!q) return alert('Enter a search term');
-
-    const url = `http://localhost:8080/search?q=${encodeURIComponent(q)}`;
-
-    try {
-        const res = await fetch(url);
-        const data = await res.json();
-
-        const resultsBox = document.getElementById('results');
-        resultsBox.innerHTML = '';
-
-        data.forEach((item, index) => {
-            const section = document.createElement('details');
-            const summary = document.createElement('summary');
-            summary.textContent = `Result ${index + 1} — ${item.title || "Untitled"}`;
-
-            const content = document.createElement('pre');
-            content.textContent = JSON.stringify(item, null, 4);
-
-            section.appendChild(summary);
-            section.appendChild(content);
-            resultsBox.appendChild(section);
-        });
-
-    } catch (err) {
-        alert('Error fetching data. Check server.');
-        console.error(err);
-    }
-}
-</script>
+<script src="search.js"></script>
 </body>
 </html>
